--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
                     <!-- Turolight Logo from Canva Brand -->
-                    <img src="https://www.canva.com/brand/kAGvRfTq-vE/logo" alt="Turolight Logo" class="w-12 h-12 drop-shadow-lg" onerror="this.style.display='none'">
+                    <img src="https://www.canva.com/brand/kAGvRfTq-vE/logo" alt="Turolight Logo Here" class="w-12 h-12 drop-shadow-lg" onerror="this.style.display='none'">
                     <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>
                 </div>
             </div>
