--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turolight AI Transformation Plan</title>
+    <title>Turolight AI & ERP Innovation Plan</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
@@ -23,8 +23,8 @@
         <div class="max-w-7xl mx-auto px-6 text-center">
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
-                    <!-- Turolight Logo from Canva Brand -->
-                    <img src="https://www.canva.com/brand/kAGvRfTq-vE/logo" alt="Turolight Logo Here" class="w-12 h-12 drop-shadow-lg" onerror="this.style.display='none'">
+                    <!-- Turolight Logo from Website -->
+                    <img src="turolight.png" alt="Turolight Logo Here" class="w-12 h-12 drop-shadow-lg" onerror="this.style.display='none'">
                     <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>
                 </div>
             </div>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="bg-white rounded-xl p-8 shadow-lg card-hover">
-                <h3 class="text-xl font-semibold mb-6 text-red-600">Current Challenges</h3>
+                <h3 class="text-xl font-semibold mb-6 text-red-600">Current Challenges (Assumptions) </h3>
                 <div class="space-y-3">
                     <div class="text-sm text-left">
                         <span>Limited digital customer engagement {assumed based on traditional B2B focus}</span>
@@ -286,6 +286,7 @@
                 </div>
             </div>
         </div>
+  
 
         <!-- B2C Bridge -->
         <div class="bg-white rounded-xl shadow-lg p-8">
@@ -312,6 +313,30 @@
             </div>
         </div>
     </div>
+
+            <!-- Get the Turolight App Section -->
+<div class="max-w-7xl mx-auto px-6 py-12">
+    <div class="bg-gradient-to-r from-blue-50 to-purple-50 rounded-xl p-8 flex flex-col md:flex-row items-center justify-between shadow-lg mb-12">
+      <div class="mb-6 md:mb-0 md:w-2/3">
+        <h2 class="text-3xl font-bold text-gray-800 mb-2">Get the Turolight App</h2>
+        <p class="text-lg text-gray-700 mb-4">
+          Turolight offers superior quality lighting products carefully selected from our manufacturing partners. We promise to stay at the leading edge of innovative and technological advancements, with a focus on delivering continued energy savings while being environmentally mindful.
+        </p>
+        <div class="flex flex-wrap gap-4">
+          <a href="https://apps.apple.com/" target="_blank" rel="noopener">
+            <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download from the Apple App Store" class="h-12">
+          </a>
+          <a href="https://play.google.com/store" target="_blank" rel="noopener">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Download from Google Play Store" class="h-12">
+          </a>
+        </div>
+      </div>
+      <div class="md:w-1/3 flex justify-center">
+        <img src="your-app-mockup.png" alt="Turolight App Preview" class="w-40 h-auto rounded-xl shadow-xl border-4 border-white bg-white"
+             onerror="this.style.display='none'">
+      </div>
+    </div>
+  </div>
 
     <!-- PoC Components Modal -->
     <div id="pocModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
@@ -941,6 +966,13 @@
             </div>
         </div>
     </div>
+<!-- Floating Welcome Tile for Henry -->
+<div id="welcomeTile" 
+    class="fixed bottom-36 right-8 z-50 px-6 py-3 rounded-2xl backdrop-blur-md bg-white/50 shadow-xl border border-white/30 text-center"
+    style="pointer-events:none;">
+    <div class="text-lg font-semibold text-gray-800 drop-shadow-sm">Welcome Henry</div>
+    <div class="text-base text-gray-700 opacity-80">Turolight AI ChatBot</div>
+</div>
 
     <!-- AI Chat Widget - Bottom Right -->
     <div id="chatWidget" class="fixed bottom-6 right-6 z-50">
