--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
                     <!-- Turolight Logo from Website -->
-                    <img src="turolight.png" alt="Turolight Logo Here" class="w-12 h-12 drop-shadow-lg" onerror="this.style.display='none'">
+                    <img src="Images/turolight.png" alt="Turolight Logo Here" class="w-12 h-12 drop-shadow-lg" onerror="this.style.display='none'">
                     <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>
                 </div>
             </div>
@@ -147,15 +147,15 @@
                     </div>
                     <div class="space-y-3">
                         <div class="flex items-start">
-                            <span class="text-green-500 mr-2">✅</span>
+                            <span class="text-green-500 mr-2">🔹</span>
                             <span class="text-sm">Build lightweight PoC: AI assistant + demand forecasting</span>
                         </div>
                         <div class="flex items-start">
-                            <span class="text-green-500 mr-2">✅</span>
+                            <span class="text-green-500 mr-2">🔹</span>
                             <span class="text-sm">Integrate with NetSuite sandbox</span>
                         </div>
                         <div class="flex items-start">
-                            <span class="text-green-500 mr-2">✅</span>
+                            <span class="text-green-500 mr-2">🔹</span>
                             <span class="text-sm">Mobile mockup for future app</span>
                         </div>
                     </div>
@@ -337,7 +337,40 @@
       </div>
     </div>
   </div>
-
+<!-- B2C Digital Experience: Get the Turolight App -->
+<div class="max-w-7xl mx-auto px-6 py-14">
+    <div class="bg-gradient-to-r from-pink-50 via-blue-50 to-purple-50 rounded-2xl p-10 flex flex-col md:flex-row items-center justify-between shadow-2xl mb-12 gap-8">
+      <div class="md:w-2/3 mb-6 md:mb-0">
+        <h2 class="text-4xl font-extrabold text-gray-900 mb-3">Get the Turolight App</h2>
+        <p class="text-lg text-gray-700 mb-6">
+          <span class="font-semibold text-blue-700">Experience lighting reimagined for you.</span><br>
+          Turolight offers superior quality lighting products carefully selected from our manufacturing partners.<br>
+          <span class="text-pink-600">Find the perfect lights for your home or business, get instant recommendations, and enjoy energy savings—right from your phone.</span><br>
+          We promise to stay at the leading edge of innovative and technological advancements, with a focus on delivering continued energy savings while being environmentally mindful.
+        </p>
+        <div class="flex gap-4 mb-4">
+          <a href="https://apps.apple.com/" target="_blank" rel="noopener">
+            <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="Download from the Apple App Store" class="h-12">
+          </a>
+          <a href="https://play.google.com/store" target="_blank" rel="noopener">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" alt="Download from Google Play Store" class="h-12">
+          </a>
+        </div>
+        <ul class="text-sm text-gray-600 space-y-1 pl-2 border-l-4 border-blue-200 ml-2">
+          <li>• Personalize your lighting with the AI Lighting Calculator</li>
+          <li>• Get instant quotes and expert recommendations</li>
+          <li>• Track orders, manage warranties, and access support—all in one place</li>
+          <li>• Eco-friendly: Monitor your energy savings</li>
+          <li>• Built for homeowners, business owners, and interior designers</li>
+        </ul>
+      </div>
+      <div class="md:w-1/3 flex justify-center">
+        <img src="your-app-mockup.png" alt="Turolight App Preview" class="w-48 h-auto rounded-xl shadow-xl border-4 border-white bg-white"
+             onerror="this.style.display='none'">
+      </div>
+    </div>
+  </div>
+  
     <!-- PoC Components Modal -->
     <div id="pocModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center p-4">
         <div class="bg-white rounded-xl max-w-6xl w-full max-h-[90vh] overflow-y-auto">
