--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
                     <!-- Turolight Logo from Website -->
-                    <img src="Images/turolight.png" alt="Turolight Logo Here" class="w-12 h-12 drop-shadow-lg" onerror="this.style.display='none'">
-                    <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>
+                    <img src="Images/image.png"      alt="Turolight Logo Here"
+                    class="h-12 object-contain drop-shadow-lg bg-white rounded-xl px-1"
+                    style="max-width:120px;"
+                    onerror="this.style.display='none'">>
+                  <!--  <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>-->
                 </div>
             </div>
             <h1 class="text-5xl font-bold mb-4">Turolight AI Transformation</h1>
@@ -314,7 +317,7 @@
         </div>
     </div>
 
-            <!-- Get the Turolight App Section -->
+            <!-- Get the Turolight App Section 
 <div class="max-w-7xl mx-auto px-6 py-12">
     <div class="bg-gradient-to-r from-blue-50 to-purple-50 rounded-xl p-8 flex flex-col md:flex-row items-center justify-between shadow-lg mb-12">
       <div class="mb-6 md:mb-0 md:w-2/3">
@@ -336,17 +339,15 @@
              onerror="this.style.display='none'">
       </div>
     </div>
-  </div>
+  </div> -->
 <!-- B2C Digital Experience: Get the Turolight App -->
 <div class="max-w-7xl mx-auto px-6 py-14">
     <div class="bg-gradient-to-r from-pink-50 via-blue-50 to-purple-50 rounded-2xl p-10 flex flex-col md:flex-row items-center justify-between shadow-2xl mb-12 gap-8">
       <div class="md:w-2/3 mb-6 md:mb-0">
         <h2 class="text-4xl font-extrabold text-gray-900 mb-3">Get the Turolight App</h2>
         <p class="text-lg text-gray-700 mb-6">
-          <span class="font-semibold text-blue-700">Experience lighting reimagined for you.</span><br>
-          Turolight offers superior quality lighting products carefully selected from our manufacturing partners.<br>
-          <span class="text-pink-600">Find the perfect lights for your home or business, get instant recommendations, and enjoy energy savings—right from your phone.</span><br>
-          We promise to stay at the leading edge of innovative and technological advancements, with a focus on delivering continued energy savings while being environmentally mindful.
+          <span class="font-semibold text-blue-700">Digital Experience in lighting technology.</span><br>
+          Turolight offers superior quality lighting products carefully selected from our manufacturing partners. We promise to stay at the leading edge of innovative and technological advancements, with a focus on delivering continued energy savings while being environmentally mindful.
         </p>
         <div class="flex gap-4 mb-4">
           <a href="https://apps.apple.com/" target="_blank" rel="noopener">
@@ -357,11 +358,12 @@
           </a>
         </div>
         <ul class="text-sm text-gray-600 space-y-1 pl-2 border-l-4 border-blue-200 ml-2">
+          <li>• Built for homeowners, business owners, and interior designers</li>
           <li>• Personalize your lighting with the AI Lighting Calculator</li>
-          <li>• Get instant quotes and expert recommendations</li>
+          <li>• Get AI Powered instant quotes and expert recommendations</li>
           <li>• Track orders, manage warranties, and access support—all in one place</li>
           <li>• Eco-friendly: Monitor your energy savings</li>
-          <li>• Built for homeowners, business owners, and interior designers</li>
+          <li>• & more .... </li>
         </ul>
       </div>
       <div class="md:w-1/3 flex justify-center">
@@ -1000,11 +1002,11 @@
         </div>
     </div>
 <!-- Floating Welcome Tile for Henry -->
-<div id="welcomeTile" 
-    class="fixed bottom-36 right-8 z-50 px-6 py-3 rounded-2xl backdrop-blur-md bg-white/50 shadow-xl border border-white/30 text-center"
-    style="pointer-events:none;">
-    <div class="text-lg font-semibold text-gray-800 drop-shadow-sm">Welcome Henry</div>
-    <div class="text-base text-gray-700 opacity-80">Turolight AI ChatBot</div>
+<div id="welcomeHenry"
+     class="fixed left-6 top-20 md:top-24 z-50 bg-white/70 backdrop-blur-md rounded-xl px-6 py-3 shadow-lg border border-gray-200"
+     style="pointer-events: none;">
+    <div class="text-lg font-semibold text-blue-900">Welcome Henry,</div>
+    <div class="text-base text-gray-700">Turolight AI Chat</div>
 </div>
 
     <!-- AI Chat Widget - Bottom Right -->
