--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
                     <!-- Turolight Logo from Website -->
-                    <img src="Images/image.png"      alt="Turolight Logo Here"
+                    <img src="Images/Turo.png"      alt="Turolight Logo Here"
                     class="h-12 object-contain drop-shadow-lg bg-white rounded-xl px-1"
                     style="max-width:120px;"
                     onerror="this.style.display='none'">>
-                  <!--  <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>-->
+                  <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>
                 </div>
             </div>
             <h1 class="text-5xl font-bold mb-4">Turolight AI Transformation</h1>
@@ -1003,7 +1003,7 @@
     </div>
 <!-- Floating Welcome Tile for Henry -->
 <div id="welcomeHenry"
-     class="fixed left-6 top-20 md:top-24 z-50 bg-white/70 backdrop-blur-md rounded-xl px-6 py-3 shadow-lg border border-gray-200"
+     class="fixed right-6 bottom-8 md:bottom-8 z-50 bg-white/70 backdrop-blur-md rounded-xl px-6 py-3 shadow-lg border border-gray-200"
      style="pointer-events: none;">
     <div class="text-lg font-semibold text-blue-900">Welcome Henry,</div>
     <div class="text-base text-gray-700">Turolight AI Chat</div>
