--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
                     <!-- Turolight Logo from Website -->
-                    <img src="Images/Turo.png"      alt="Turolight Logo Here"
-                    class="h-12 object-contain drop-shadow-lg bg-white rounded-xl px-1"
-                    style="max-width:120px;"
-                    onerror="this.style.display='none'">>
+                    <img src="Images/Turo.png"
+                     alt="Turolight Logo"
+                     class="h-24 w-24 object-contain drop-shadow-lg"
+                     style="background: transparent; max-width: 180px;"
+                     onerror="this.style.display='none'">
                   <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>
                 </div>
             </div>
-            <h1 class="text-5xl font-bold mb-4">Turolight AI Transformation</h1>
+            <h1 class="text-5xl font-bold mb-4">Innovating Turolight through AI & ERP Transformation</h1>
             <p class="text-xl opacity-90 max-w-3xl mx-auto">An AI-enhanced Smart Operations & Sales Portal to streamline operations, enhance customer experience, and enable data-driven B2C expansion</p>
         </div>
     </div>
@@ -1003,7 +1004,7 @@
     </div>
 <!-- Floating Welcome Tile for Henry -->
 <div id="welcomeHenry"
-     class="fixed right-6 bottom-8 md:bottom-8 z-50 bg-white/70 backdrop-blur-md rounded-xl px-6 py-3 shadow-lg border border-gray-200"
+     class="fixed right-6 bottom-32 md:bottom-32 z-50 bg-white/70 backdrop-blur-md rounded-xl px-6 py-3 shadow-lg border border-gray-200"
      style="pointer-events: none;">
     <div class="text-lg font-semibold text-blue-900">Welcome Henry,</div>
     <div class="text-base text-gray-700">Turolight AI Chat</div>
