--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
                     <!-- Turolight Logo from Website -->
-                    <img src="Images/Turo.png"
+                    <img src="Images/image.png"
                      alt="Turolight Logo"
                      class="h-40 w-40 object-contain drop-shadow-lg"
                      style="background: transparent; max-width: 50px;"
