--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </style>
 </head>
 <body class="bg-gray-50">
-    <!-- Header -->
+<!-- Header -->
+<div class="w-[75vw] mx-auto rounded-2xl overflow-hidden">
     <div class="gradient-bg text-white py-16">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <div class="mb-6">
@@ -36,6 +37,8 @@
             <p class="text-xl opacity-90 max-w-3xl mx-auto">An AI-enhanced Smart Operations & Sales Portal to streamline operations, enhance customer experience, and enable data-driven B2C expansion</p>
         </div>
     </div>
+  </div>
+  
 
     <!-- Current Business Overview -->
     <div class="max-w-7xl mx-auto px-6 py-16">
@@ -326,7 +329,7 @@
                     </div>
                     
                     <!-- Phase Details Below Road -->
-                    <div class="absolute bottom-2 left-0 right-0 grid grid-cols-4 gap-16 max-w-4xl mx-auto px-8">
+                    <div class="absolute bottom-0 left-0 right-0 grid grid-cols-4 gap-16 max-w-4xl mx-auto px-8">
                         <!-- Phase 1 Details -->
                         <div class="text-center">
                             <div class="text-xs text-green-700 font-medium">
