--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     </style>
 </head>
 <body class="bg-gray-50">
-<!-- Header -->
-<div class="w-[75vw] mx-auto rounded-2xl overflow-hidden">
-    <div class="gradient-bg text-white py-16">
+    <!-- Header -->
+    <div class="gradient-bg text-white py-12">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
@@ -37,7 +36,6 @@
             <p class="text-xl opacity-90 max-w-3xl mx-auto">An AI-enhanced Smart Operations & Sales Portal to streamline operations, enhance customer experience, and enable data-driven B2C expansion</p>
         </div>
     </div>
-  </div>
   
 
     <!-- Current Business Overview -->
@@ -120,14 +118,19 @@
                             <td class="px-6 py-4 text-green-600">24/7 AI chat assistant, instant smart quotes, personalized recommendations</td>
                         </tr>
                         <tr class="hover:bg-gray-50">
+                            <td class="px-6 py-4 font-medium">NetSuite Payment Processing</td>
+                            <td class="px-6 py-4 text-red-600">Manual invoicing, check payments</td>
+                            <td class="px-6 py-4 text-green-600">NetSuite-integrated payments: PO, Net Terms, Credit Cards, ACH for B2B & B2C</td>
+                        </tr>
+                        <tr class="hover:bg-gray-50">
                             <td class="px-6 py-4 font-medium">AI Product Configuration</td>
                             <td class="px-6 py-4 text-red-600">Manual specs, email back-and-forth</td>
                             <td class="px-6 py-4 text-green-600">AI-powered CPQ system, smart lighting calculator, real-time NetSuite pricing</td>
                         </tr>
                         <tr class="hover:bg-gray-50">
-                            <td class="px-6 py-4 font-medium">NetSuite Payment Processing</td>
-                            <td class="px-6 py-4 text-red-600">Manual invoicing, check payments</td>
-                            <td class="px-6 py-4 text-green-600">NetSuite-integrated payments: PO, Net Terms, Credit Cards, ACH for B2B & B2C</td>
+                            <td class="px-6 py-4 font-medium">AI based Route optimization</td>
+                            <td class="px-6 py-4 text-red-600">Current Logistic</td>
+                            <td class="px-6 py-4 text-green-600">AI-powered Route management - reduce fuel, on-time delivery, less load on drivers</td>
                         </tr>
                         <tr class="hover:bg-gray-50">
                             <td class="px-6 py-4 font-medium">AI Inventory Management</td>
@@ -135,14 +138,14 @@
                             <td class="px-6 py-4 text-green-600">NetSuite real-time sync, AI demand forecasting, automated B2B/B2C reordering</td>
                         </tr>
                         <tr class="hover:bg-gray-50">
-                            <td class="px-6 py-4 font-medium">AI Lead Generation</td>
-                            <td class="px-6 py-4 text-red-600">Trade shows, referrals only</td>
-                            <td class="px-6 py-4 text-green-600">AI calculators, smart B2C portal, automated B2B lead scoring</td>
-                        </tr>
-                        <tr class="hover:bg-gray-50">
                             <td class="px-6 py-4 font-medium">NetSuite Customer Intelligence</td>
                             <td class="px-6 py-4 text-red-600">Scattered across systems</td>
                             <td class="px-6 py-4 text-green-600">NetSuite unified profiles, AI-powered B2B/B2C personalization, predictive insights</td>
+                        </tr>
+                        <tr class="hover:bg-gray-50">
+                            <td class="px-6 py-4 font-medium">AI Lead Generation</td>
+                            <td class="px-6 py-4 text-red-600">Trade shows, referrals only</td>
+                            <td class="px-6 py-4 text-green-600">AI calculators, smart B2C portal, automated B2B lead scoring</td>
                         </tr>
                     </tbody>
                 </table>
