--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
-    <div class="gradient-bg text-white py-12">
+    <div class="gradient-bg text-white py-8">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
@@ -129,7 +129,7 @@
                         </tr>
                         <tr class="hover:bg-gray-50">
                             <td class="px-6 py-4 font-medium">AI based Route optimization</td>
-                            <td class="px-6 py-4 text-red-600">Current Logistic</td>
+                            <td class="px-6 py-4 text-red-600">Current Logistics</td>
                             <td class="px-6 py-4 text-green-600">AI-powered Route management - reduce fuel, on-time delivery, less load on drivers</td>
                         </tr>
                         <tr class="hover:bg-gray-50">
@@ -235,7 +235,7 @@
                         </div>
                         <div class="flex items-start">
                             <span class="text-purple-500 mr-2">🔹</span>
-                            <span class="text-sm">AI IoT-enabled smart lighting ecosystem</span>
+                            <span class="text-sm">AI Inventory Management & Demand Planning</span>
                         </div>
                         <div class="flex items-start">
                             <span class="text-purple-500 mr-2">🔹</span>
@@ -332,7 +332,7 @@
                     </div>
                     
                     <!-- Phase Details Below Road -->
-                    <div class="absolute bottom-0 left-0 right-0 grid grid-cols-4 gap-16 max-w-4xl mx-auto px-8">
+                    <div class="absolute bottom-0 left-0 right-0 grid grid-cols-4 gap-16 max-w-4xl mx-auto px-4">
                         <!-- Phase 1 Details -->
                         <div class="text-center">
                             <div class="text-xs text-green-700 font-medium">
@@ -667,7 +667,7 @@
         </div>
     </div>
 <!-- B2C Digital Experience: Get the Turolight App -->
-<div class="max-w-7xl mx-auto px-6 py-14">
+<div class="max-w-7xl mx-auto px-6 py-4">
     <div class="bg-gradient-to-r from-pink-50 via-blue-50 to-purple-50 rounded-2xl p-10 flex flex-col md:flex-row items-center justify-between shadow-2xl mb-12 gap-8">
       <div class="md:w-2/3 mb-6 md:mb-0">
         <h2 class="text-4xl font-extrabold text-gray-900 mb-3">Get the Turolight App</h2>
