--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
-    <div class="gradient-bg text-white py-8">
+    <div class="gradient-bg text-white py-2">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <div class="mb-6">
                 <div class="inline-flex items-center gap-3">
@@ -615,7 +615,7 @@
 
             <!-- Expected Business Impact -->
             <div class="bg-gradient-to-r from-gray-800 to-gray-900 text-white rounded-xl p-8">
-                <h3 class="text-2xl font-bold text-center mb-8">📊 Expected E-commerce Impact</h3>
+                <h3 class="text-2xl font-bold text-center mb-8">📊 Expected B2B/B2C E-commerce ROI Impact</h3>
                 
                 <div class="grid md:grid-cols-3 gap-8">
                     <div class="text-center">
@@ -667,7 +667,7 @@
         </div>
     </div>
 <!-- B2C Digital Experience: Get the Turolight App -->
-<div class="max-w-7xl mx-auto px-6 py-4">
+<div class="max-w-7xl mx-auto px-6 py-2">
     <div class="bg-gradient-to-r from-pink-50 via-blue-50 to-purple-50 rounded-2xl p-10 flex flex-col md:flex-row items-center justify-between shadow-2xl mb-12 gap-8">
       <div class="md:w-2/3 mb-6 md:mb-0">
         <h2 class="text-4xl font-extrabold text-gray-900 mb-3">Get the Turolight App</h2>
