--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Header -->
     <div class="gradient-bg text-white py-1">
         <div class="max-w-7xl mx-auto px-6 text-center">
-            <div class="mb-6">
+            <div class="mb-3">
                 <div class="inline-flex items-center gap-3">
                     <!-- Turolight Logo from Website -->
                     <img src="Images/image.png"
@@ -447,7 +447,7 @@
                     </div>
                     <div class="text-sm text-gray-600 space-y-2">
                         <p><strong>Features:</strong> Stock status, quotes</p>
-                        <p><strong>Tech:</strong> GPT-4 Turbo API</p>
+                        <p><strong>Tech:</strong> AI API</p>
                         <p><strong>Interface:</strong> React + Tailwind</p>
                     </div>
                     <div class="text-center mt-4">
@@ -785,7 +785,7 @@
                                 <span class="text-3xl">🤖</span>
                             </div>
                             <h3 class="text-xl font-bold text-green-800">AI Sales Assistant</h3>
-                            <p class="text-sm text-green-600">GPT-4 powered customer support</p>
+                            <p class="text-sm text-green-600">AI powered customer support</p>
                         </div>
                         
                         <div class="bg-white rounded-lg p-4 shadow-sm h-80 flex flex-col">
@@ -948,7 +948,7 @@
                         </div>
                         <div class="text-center p-4 bg-white rounded-lg shadow-sm">
                             <span class="text-2xl block mb-2">🤖</span>
-                            <p class="font-medium">GPT-4 Turbo</p>
+                            <p class="font-medium">AI tool</p>
                             <p class="text-gray-600 text-xs">Natural language processing for customer queries</p>
                         </div>
                         <div class="text-center p-4 bg-white rounded-lg shadow-sm">
