--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
     </style>
 </head>
 <body class="bg-gray-50">
+    
     <!-- Header -->
-    <div class="gradient-bg text-white py-1">
+    <div class="gradient-bg text-white py-2">
         <div class="max-w-7xl mx-auto px-6 text-center">
-            <div class="mb-3">
-                <div class="inline-flex items-center gap-3">
+            <div class="mb-2">
+                <div class="inline-flex items-center gap-2">
                     <!-- Turolight Logo from Website -->
                     <img src="Images/image.png"
-                     alt="Turolight Logo"
-                     class="h-40 w-40 object-contain drop-shadow-lg"
-                     style="background: transparent; max-width: 50px;"
-                     onerror="this.style.display='none'">
-                  <span class="text-3xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>
+                         alt="Turolight Logo"
+                         class="h-10 w-10 object-contain drop-shadow-lg"
+                         style="background: transparent; max-width: 40px;"
+                         onerror="this.style.display='none'">
+                    <span class="text-2xl font-bold"><span class="text-black">TURO</span><span class="text-white">LIGHT</span></span>
                 </div>
-                <h1 class="text-2xl font-bold mb-4">Innovating Turolight through AI & ERP Transformation</h1>
-                <p class="text-xl opacity-90 max-w-3xl mx-auto">An AI-enhanced Smart Operations & Sales Portal to streamline operations, enhance customer experience, and enable data-driven B2C expansion</p>    
+                <h1 class="text-lg font-bold mb-2 mt-1">Innovating Turolight through AI & ERP Transformation</h1>
+                <p class="text-base opacity-90 max-w-2xl mx-auto">An AI-enhanced Smart Operations & Sales Portal to streamline operations, enhance customer experience, and enable data-driven B2C expansion</p>    
             </div>
-            
         </div>
-    </div>
+    </div>    
 
     <!-- Current Business Overview -->
     <div class="max-w-7xl mx-auto px-6 py-16">
